--- a/global.css
+++ b/global.css
@@ -63,6 +63,18 @@ body {
         border-radius: 6px;
     }
 
+.dropdown select {
+    font-size: 16px;
+    border: 1px solid #DEDEDE;
+    flex: 1;
+    border-radius: 10px;
+    padding: 6px;
+}
+
+.dropdown option {
+    font-size: 16px;
+}
+
 .input-validation {
     display: flex;
     flex-direction: row;
@@ -94,6 +106,16 @@ body {
 
     .button:hover {
         background-color: #0095ba;
+    }
+
+.button-outline {
+    background-color: white;
+    border-color: var(--primary);
+    color: var(--primary);
+}
+
+    .button-outline:hover {
+        background-color: whitesmoke;
     }
 
 .header {
@@ -163,7 +185,7 @@ body {
     padding: 16px;
 }
 
-    .dashboard-form > div {
+    .dashboard-form > div, h2 {
         width: 100%;
         margin: 0px;
     }
@@ -199,16 +221,6 @@ body {
         height: 30px;
     }
 
-.button-keep {
-    background-color: white;
-    border-color: var(--primary);
-    color: black;
-}
-
-    .button-keep:hover {
-        background-color: whitesmoke;
-    }
-
 .button-cancel{
     background-color: var(--red);
     border-color: darkred;
@@ -217,7 +229,3 @@ body {
     .button-cancel:hover {
         background-color: var(--darkred);
     }
-
-.text-center {
-    text-align: center;
-}
